# orbit-Q

./: .gitignore  .pyre_configuration  CODEOWNERS.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  dashboard.py  docker-compose.yml  docker_compose.yml  dockerfile  feature_processor.py  fix_pages.py  git_status.txt  git_status_utf8.txt  ml_engine.py  ml_orchestrator.py  mock_telemetry.py  pyproject.toml  readme_diff.txt  requirements.txt  run_tests.py  test_clean.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
configs/: .env.example
models/: orbit_q_ensemble_latest.pkl
pages/: 01_Live_Telemetry.py  02_Alert_Command.py  03_Hardware_Diagnostics.py  04_Orbital_Tracking.py  05_Raw_Telemetry_Logs.py  06_Performance_Audit.py  07_Inference_Latency.py  08_MLflow_Lineage.py  09_Model_Retraining.py  10_Endpoint_Health.py
results/: benchmark_parsed.txt  benchmark_real.txt  benchmark_results.txt  benchmark_results_utf8.txt  pytest_log.txt  pytest_output.txt  test_log.txt
src/orbit_q/: benchmark.py  cli.py  config.py  security.py  sensor_anomaly_pipeline.py
src/orbit_q/dashboard/: dashboard.py
src/orbit_q/dashboard/pages/: 01_Live_Telemetry.py  (+9 more)
src/orbit_q/engine/: distributed_trainer.py  ml_engine.py
src/orbit_q/ingestion/: README.md  kafka_client.py
src/orbit_q/mlflow_tracking/: mlops_lineage.py  retraining_pipeline.py
src/orbit_q/orchestrator/: README.md  feature_processor.py  ml_orchestrator.py
src/orbit_q/simulator/: mock_telemetry.py  multi_cubesat_stress.py
tests/: test_ml_engine.py  test_security_and_stress.py  test_simulator.py
(+7 files in other folders)
