[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-q"
version = "1.0.0"
description = "Enterprise-Grade Satellite Operations Command Center & Telemetry Anomaly Detection"
authors = [
    {name = "Orbit-Q Team", email = "engineering@orbitq.local"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.20.0",
    "firebase-admin>=6.0.0",
    "mlflow>=2.0.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.4.0",
    "numpy>=1.22.0",
    "requests>=2.28.0"
]

[project.scripts]
orbit-q = "orbit_q.cli:main"


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]
gpu = [
    "torch>=2.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
